# animego-video-extractor-py

./: .pdm-python  README.md  pyproject.toml
.github/workflows/: create-release.yml
src/animego/: __init__.py
