[project]
name = "animego"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "voidptr_t", email = "39582793+Sanceilaks@users.noreply.github.com" }
]
dependencies = [
    "aiohttp>=3.9.5",
    "bs4>=0.0.2",
    "inquirer>=3.2.4",
    "furl>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/animego"]

[tool.rye.scripts]
start = { call = "animego:main" }
